# scanix

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: docs.yml  feature.yml  fix.yml  proposals.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
