[package]
name = "scanix"
version = "0.4.0"
edition = "2021"
authors = ["Shuja Akbar <shuaakbar2020@gmail.com>"]
description = "Scanix is tool to search a text or pattern in files. A fast and lightwight text tool."
license = "MIT OR Apache-2.0"
repository = "https://github.com/shujaakbar2020/scanix"
readme = "README.md"

[package.metadata.docs.rs]
all-features = false

[dependencies]
clap = "2"
regex = "1.11.1"
